Revision history for {{$dist->name}}

{{$NEXT}}

1.001003 2015-09-27T08:06:04Z 55e4d01
 [Dependencies::Stats]
 - Dependencies changed since 1.001002, see misc/*.deps* for details
 - runtime: +1
 - test: -1

 [Win32 Support]
 - Handle reading from objdump using slurp style IO instead of using an IO Handle  due to open '-|', @list not being
   reliable on Win32.

1.001002 2015-09-27T07:39:23Z f807e17
 [Installation]
 - Checks now attempt to extract the version itself from the version string and versions prior to 2.17 are now all
   known bad.

1.001001 2015-09-26T06:22:10Z 5cf1ba0
 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - configure: +3 -1
 - develop: +3 ↑1 -1 (suggests: ↑1)

 [Installation]
 - Now have a cursory white/black list of known good/bad objdump versions.
 - Not yet possible to clearly make sense of how to parse objdump's version directly and its not yet known exactly
   which version introduces the required functions.

 [Installation: TODO]
 - work out how to extract the list of supported targets to make sure that the ELF target is supported, and that all
   the machine targets that the test files are coded in are supported.

1.001000 2015-08-14T06:32:18Z 4d78d05
 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - runtime: +1
 - test: +2

 [Internals]
 - Parameter handling delegated to MooseX::Params::Validate
 - TODO: guard against spurious bless() causing problems, re rt#106192

 [Tests]
 - Probing for version data to make a better verison check

1.000000 2015-07-30T16:49:16Z 1c37bc4
 [!Major]
 - This release includes some respectably significant changes.

 [01 Install Side Tooling change]
 - Previously, Module::Build was used as the installer.
 - This is now ExtUtils::MakeMaker
 - See https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [02 Version Scheme Change]
 - Previously used a lengthy 0.{'0' x '8'} scheme.