@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Tests]
+ - Try to work out what the finger prints of a system that can't handle ELF64 files looks like.
 
 1.001003 2015-09-27T08:06:04Z 55e4d01
  [Dependencies::Stats]
